fixed header z-index

--- a/src/components/header/styles/header.module.sass
+++ b/src/components/header/styles/header.module.sass
@@ -1,4 +1,6 @@
 .header
+  position: relative
+  z-index: 1
   background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.1) 100%)
   position: fixed
   height: 120px
